{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 12410,
  "lineage": "f04d0394-660d-ac91-f47a-d310374b55e3",
  "resources": [
    {
      "module": "module.ec2_instance_01",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mimic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a72af05d27b49ccb",
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:instance/i-0b4f8fe205e3546be",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0442877883fff7f7d",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4f8fe205e3546be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tungopenwaygroup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b3614a409373070",
            "private_dns": "ip-10-7-7-226.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.7.7.226",
            "public_ip": "13.215.45.186",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0442877883fff7f7d",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084759604acabb930",
            "tags": {
              "Name": "3D-Secure ACS-prod-mimic",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "3D-Secure ACS",
              "resource-type": "instance",
              "site": "primary",
              "team": "sre-ops"
            },
            "tags_all": {
              "Name": "3D-Secure ACS-prod-mimic",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "3D-Secure ACS",
              "resource-type": "instance",
              "site": "primary",
              "team": "sre-ops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023b6b2602f674a1b"
            ]
          },
          "dependencies": [
            "module.vpc-way-prod.aws_security_group.way4-prod-ws",
            "module.vpc-way-prod.aws_subnet.public-dmz-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_01",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mimic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a72af05d27b49ccb",
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:instance/i-0f9bf65131d6fd63f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02fb722930babfd9f",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9bf65131d6fd63f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tungopenwaygroup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dd7aaf2b1a918be",
            "private_dns": "ip-10-7-13-28.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.7.13.28",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02fb722930babfd9f",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08599a77fedec2a91",
            "tags": {
              "Name": "web-services_01-prod-mimic",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "web-services_01",
              "resource-type": "instance",
              "site": "primary",
              "team": "sre-ops"
            },
            "tags_all": {
              "Name": "web-services_01-prod-mimic",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "web-services_01",
              "resource-type": "instance",
              "site": "primary",
              "team": "sre-ops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023b6b2602f674a1b"
            ]
          },
          "dependencies": [
            "module.vpc-way-prod.aws_security_group.way4-prod-ws",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_02",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mimic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a72af05d27b49ccb",
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:instance/i-0645a9f479c64e7f6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0f7e44570918b38",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0645a9f479c64e7f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tungopenwaygroup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0890abd687ebae1e9",
            "private_dns": "ip-10-7-13-169.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.7.13.169",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0f7e44570918b38",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08599a77fedec2a91",
            "tags": {
              "Name": "web-services-02-prod-mimic",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "web-services-02",
              "resource-type": "instance",
              "site": "primary",
              "team": "sre-ops"
            },
            "tags_all": {
              "Name": "web-services-02-prod-mimic",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "web-services-02",
              "resource-type": "instance",
              "site": "primary",
              "team": "sre-ops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023b6b2602f674a1b"
            ]
          },
          "dependencies": [
            "module.vpc-way-prod.aws_security_group.way4-prod-ws",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb4c8d86d0d294f6",
            "domain": "vpc",
            "id": "eipalloc-0cb4c8d86d0d294f6",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-74-57.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.74.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "central-network-opw-opw-eip"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03af24331294482ef",
            "domain": "vpc",
            "id": "eipalloc-03af24331294482ef",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-122-249.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.122.249",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "central-network-opw-opw-eip"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0219afbfde68d4480",
            "domain": "vpc",
            "id": "eipalloc-0219afbfde68d4480",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-179-93-162.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.93.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "central-network-opw-opw-eip"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:internet-gateway/igw-0154abeb18015de0d",
            "id": "igw-0154abeb18015de0d",
            "owner_id": "851191013252",
            "tags": {
              "Name": "central-network-opw-opw-igw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "internet-gateway",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-igw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "internet-gateway",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb4c8d86d0d294f6",
            "connectivity_type": "public",
            "id": "nat-0a32382df5d8ad30d",
            "network_interface_id": "eni-0d232346755adf9c7",
            "private_ip": "10.16.0.14",
            "public_ip": "52.220.74.57",
            "subnet_id": "subnet-0740c143360093f5b",
            "tags": {
              "Name": "central-network-opw-opw-natgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "nat-gateways",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-natgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "nat-gateways",
              "site": "primary",
              "team": "devops"
            }
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03af24331294482ef",
            "connectivity_type": "public",
            "id": "nat-0af3fff430425dc1c",
            "network_interface_id": "eni-08b74c284c0b1f1e8",
            "private_ip": "10.16.0.26",
            "public_ip": "3.1.122.249",
            "subnet_id": "subnet-0f68d811b293124a1",
            "tags": {
              "Name": "central-network-opw-opw-natgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "nat-gateways",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-natgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "nat-gateways",
              "site": "primary",
              "team": "devops"
            }
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0219afbfde68d4480",
            "connectivity_type": "public",
            "id": "nat-043b20b9aefeb2055",
            "network_interface_id": "eni-0b73ee169f751871c",
            "private_ip": "10.16.0.37",
            "public_ip": "54.179.93.162",
            "subnet_id": "subnet-0534cb13773c603a4",
            "tags": {
              "Name": "central-network-opw-opw-natgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "nat-gateways",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-natgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "nat-gateways",
              "site": "primary",
              "team": "devops"
            }
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "endpoint-subnets-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0341ac379a3b78bda",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "id": "acl-0341ac379a3b78bda",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-06e5d64a0b5e4475d",
              "subnet-0995952a45911acb8",
              "subnet-0f249d0426c583ca7"
            ],
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.vpc-endpoint-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "gwlb-endpoint-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0d555a3082adf7ee0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "id": "acl-0d555a3082adf7ee0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-0a0010debbed40419",
              "subnet-0a130c05a7816d72a",
              "subnet-0becad3847232b004"
            ],
            "tags": {
              "Name": "central-network-opw-gwlb-endpoint-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-gwlb-endpoint-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.gwlb-endpoint-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "natgw-subnets-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0bd950256f3abb554",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "id": "acl-0bd950256f3abb554",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-0534cb13773c603a4",
              "subnet-0740c143360093f5b",
              "subnet-0f68d811b293124a1"
            ],
            "tags": {
              "Name": "central-network-opw-natgw-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network-firewall-subnets-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-01333aaa035b2983e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "id": "acl-01333aaa035b2983e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-05def71a2eaaf951b",
              "subnet-07da44853621b28e1",
              "subnet-0c95fd0b48eb1739c"
            ],
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.network-firewall-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public-subnets-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0c7d0f215238125e9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "id": "acl-0c7d0f215238125e9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-0033dc3939c848589",
              "subnet-0125b06a6c62508cb",
              "subnet-0b8cbe950b7021564"
            ],
            "tags": {
              "Name": "central-network-opw-public-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-public-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.public-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tgw-attachment-subnets-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0afb52a3d06a37e96",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "id": "acl-0afb52a3d06a37e96",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 10000,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-010dcbfaf46b19f48",
              "subnet-09ae1db0c0fb9eac0",
              "subnet-0b5f1f7f46f90be59"
            ],
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "natgw-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0509f04eb573ebc23",
            "id": "rtb-0509f04eb573ebc23",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154abeb18015de0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-natgw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-089264c6f518c496f",
            "id": "rtb-089264c6f518c496f",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154abeb18015de0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-natgw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0a69fa6b778725694",
            "id": "rtb-0a69fa6b778725694",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154abeb18015de0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-natgw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "network-firewall-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0d562e0714d0bcc81",
            "id": "rtb-0d562e0714d0bcc81",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a32382df5d8ad30d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-04264b581ac8df68a",
            "id": "rtb-04264b581ac8df68a",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0af3fff430425dc1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-03be3eb96b442fdad",
            "id": "rtb-03be3eb96b442fdad",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-043b20b9aefeb2055",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0d186bd8e8d6c04fe",
            "id": "rtb-0d186bd8e8d6c04fe",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0154abeb18015de0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-public-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-public-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw-attachment-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-037604137dfcff09c",
            "id": "rtb-037604137dfcff09c",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a32382df5d8ad30d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-01ddccaa97c7bb0a2",
            "id": "rtb-01ddccaa97c7bb0a2",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0af3fff430425dc1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-080e5170d2cab74e1",
            "id": "rtb-080e5170d2cab74e1",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-043b20b9aefeb2055",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-endpoint-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0ac6e1761dde476f0",
            "id": "rtb-0ac6e1761dde476f0",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-03d1a6bc8e51b12e9",
            "id": "rtb-03d1a6bc8e51b12e9",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-034e877b75b30c665",
            "id": "rtb-034e877b75b30c665",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2cf921878a2229",
            "route_table_id": "rtb-0509f04eb573ebc23",
            "subnet_id": "subnet-0740c143360093f5b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_route_table.natgw-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e63dc1479903a6e2",
            "route_table_id": "rtb-089264c6f518c496f",
            "subnet_id": "subnet-0f68d811b293124a1"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_route_table.natgw-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f5e6da0713a2cc9",
            "route_table_id": "rtb-0a69fa6b778725694",
            "subnet_id": "subnet-0534cb13773c603a4"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_route_table.natgw-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "network-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d4e71bb4564fa2",
            "route_table_id": "rtb-0d562e0714d0bcc81",
            "subnet_id": "subnet-05def71a2eaaf951b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_route_table.network-firewall-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.network-firewall-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab9dc5c0ccab79b",
            "route_table_id": "rtb-04264b581ac8df68a",
            "subnet_id": "subnet-07da44853621b28e1"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_route_table.network-firewall-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.network-firewall-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca42a23b975430ef",
            "route_table_id": "rtb-03be3eb96b442fdad",
            "subnet_id": "subnet-0c95fd0b48eb1739c"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_route_table.network-firewall-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.network-firewall-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073778f4b558cd017",
            "route_table_id": "rtb-0d186bd8e8d6c04fe",
            "subnet_id": "subnet-0125b06a6c62508cb"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_route_table.public-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.public-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0154f515a99ae9be4",
            "route_table_id": "rtb-0d186bd8e8d6c04fe",
            "subnet_id": "subnet-0b8cbe950b7021564"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_route_table.public-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.public-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cd6b87d3bd88367",
            "route_table_id": "rtb-0d186bd8e8d6c04fe",
            "subnet_id": "subnet-0033dc3939c848589"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_route_table.public-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.public-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tgw-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6bc1a1a86887277",
            "route_table_id": "rtb-037604137dfcff09c",
            "subnet_id": "subnet-09ae1db0c0fb9eac0"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_route_table.tgw-attachment-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0710945308bfafc3d",
            "route_table_id": "rtb-01ddccaa97c7bb0a2",
            "subnet_id": "subnet-0b5f1f7f46f90be59"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_route_table.tgw-attachment-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00416e686205f57ad",
            "route_table_id": "rtb-080e5170d2cab74e1",
            "subnet_id": "subnet-010dcbfaf46b19f48"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_eip.nat",
            "module.network-central-network-prod-outbound.aws_internet_gateway.IGW",
            "module.network-central-network-prod-outbound.aws_nat_gateway.NGW",
            "module.network-central-network-prod-outbound.aws_route_table.tgw-attachment-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.natgw-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074d08749ee17ae6c",
            "route_table_id": "rtb-0ac6e1761dde476f0",
            "subnet_id": "subnet-06e5d64a0b5e4475d"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_route_table.vpc-endpoint-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.vpc-endpoint-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8e7b8fc75b8282c",
            "route_table_id": "rtb-03d1a6bc8e51b12e9",
            "subnet_id": "subnet-0995952a45911acb8"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_route_table.vpc-endpoint-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.vpc-endpoint-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f4acc6af4f04cd2",
            "route_table_id": "rtb-034e877b75b30c665",
            "subnet_id": "subnet-0f249d0426c583ca7"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_route_table.vpc-endpoint-rtb",
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_subnet.vpc-endpoint-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "central_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-0594ba1bdf93152d2",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0594ba1bdf93152d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9988,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9988
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "central-sg",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "central-network-opw-central-sg-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-central-sg-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "central_sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-00d1e695e2079b981",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d1e695e2079b981",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "central_sg",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "central-network-opw-central_sg-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-central_sg-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlb-endpoint-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0becad3847232b004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.1.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0becad3847232b004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-gwlb-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-gwlb-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0a130c05a7816d72a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.1.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a130c05a7816d72a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-gwlb-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-gwlb-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0a0010debbed40419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.16.1.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0010debbed40419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-gwlb-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-gwlb-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "natgw-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0740c143360093f5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0740c143360093f5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-natgw-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0f68d811b293124a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f68d811b293124a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-natgw-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0534cb13773c603a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.16.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0534cb13773c603a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-natgw-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-natgw-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "network-firewall-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-05def71a2eaaf951b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05def71a2eaaf951b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-07da44853621b28e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.1.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07da44853621b28e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0c95fd0b48eb1739c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.16.1.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c95fd0b48eb1739c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-network-firewall-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-network-firewall-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0125b06a6c62508cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0125b06a6c62508cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-public-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-public-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0b8cbe950b7021564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8cbe950b7021564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-public-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-public-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0033dc3939c848589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033dc3939c848589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-public-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-public-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw-attachment-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-09ae1db0c0fb9eac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ae1db0c0fb9eac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0b5f1f7f46f90be59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5f1f7f46f90be59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-010dcbfaf46b19f48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.16.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010dcbfaf46b19f48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-endpoint-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-06e5d64a0b5e4475d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.0.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e5d64a0b5e4475d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0995952a45911acb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.0.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0995952a45911acb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0f249d0426c583ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.16.0.224/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f249d0426c583ca7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "central-network-opw-vpc-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-vpc-endpoint-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0e7f348dce39c558b"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-central-network-prod-outbound",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "central_outbound_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:vpc/vpc-0e7f348dce39c558b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0384e47786ce7e4c7",
            "default_route_table_id": "rtb-09fb732ef135fc823",
            "default_security_group_id": "sg-0c5044a51214f178e",
            "dhcp_options_id": "dopt-0e05caa86f3e708b8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7f348dce39c558b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09fb732ef135fc823",
            "owner_id": "851191013252",
            "tags": {
              "Name": "central-network-opw-opw-vpc",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "vpc",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-vpc",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "vpc",
              "site": "primary",
              "team": "devops"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "network_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:loadbalancer/net/nlb-nlb/28020eeb08fa951c",
            "arn_suffix": "net/nlb-nlb/28020eeb08fa951c",
            "dns_name": "nlb-nlb-28020eeb08fa951c.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:loadbalancer/net/nlb-nlb/28020eeb08fa951c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08599a77fedec2a91"
              }
            ],
            "subnets": [
              "subnet-08599a77fedec2a91"
            ],
            "tags": {
              "name": "nlb-nlb"
            },
            "tags_all": {
              "name": "nlb-nlb"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:listener/net/nlb-nlb/28020eeb08fa951c/00b23b0599865e1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:listener/net/nlb-nlb/28020eeb08fa951c/00b23b0599865e1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:loadbalancer/net/nlb-nlb/28020eeb08fa951c",
            "port": 8686,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_load_balancer.aws_lb.network_load_balancer",
            "module.network_load_balancer.aws_lb_target_group.nlb_targert_group",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_targert_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1",
            "arn_suffix": "targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "nlb-tg20230509084139396200000004",
            "name_prefix": "nlb-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_target_group_attachment_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1-20230509084213064500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1",
            "target_id": "i-0f9bf65131d6fd63f"
          },
          "dependencies": [
            "module.instance_01.aws_instance.mimic",
            "module.network_load_balancer.aws_lb_target_group.nlb_targert_group",
            "module.vpc-way-prod.aws_security_group.way4-prod-ws",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_target_group_attachment_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1-20230509084212889800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:851191013252:targetgroup/nlb-tg20230509084139396200000004/d560ac051af1aae1",
            "target_id": "i-0645a9f479c64e7f6"
          },
          "dependencies": [
            "module.instance_02.aws_instance.mimic",
            "module.network_load_balancer.aws_lb_target_group.nlb_targert_group",
            "module.vpc-way-prod.aws_security_group.way4-prod-ws",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:transit-gateway/tgw-0fe904942d4c271da",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "dns_support": "enable",
            "id": "tgw-0fe904942d4c271da",
            "multicast_support": "disable",
            "owner_id": "851191013252",
            "tags": {
              "Name": "central-network-opw-opw-tgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "tgw",
              "site": "primary",
              "team": "sre-ops"
            },
            "tags_all": {
              "Name": "central-network-opw-opw-tgw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "tgw",
              "site": "primary",
              "team": "sre-ops"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "TGW-central-outbound-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:transit-gateway-route-table/tgw-rtb-05eac6ab940ed9e2f",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-05eac6ab940ed9e2f",
            "tags": {
              "Name": "central-network-outbound-vpc-tgw-attachment-rtb"
            },
            "tags_all": {
              "Name": "central-network-outbound-vpc-tgw-attachment-rtb"
            },
            "transit_gateway_id": "tgw-0fe904942d4c271da"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "TGW-central-outbound-rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-05eac6ab940ed9e2f_tgw-attach-0f9f2628bf88d2be5",
            "resource_id": "vpc-0e7f348dce39c558b",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f9f2628bf88d2be5",
            "transit_gateway_route_table_id": "tgw-rtb-05eac6ab940ed9e2f"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_route_table.TGW-central-outbound-rt",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "TGW-rt-prop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-05eac6ab940ed9e2f_tgw-attach-0f9f2628bf88d2be5",
            "resource_id": "vpc-0e7f348dce39c558b",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f9f2628bf88d2be5",
            "transit_gateway_route_table_id": "tgw-rtb-05eac6ab940ed9e2f"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_route_table.TGW-central-outbound-rt",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "TGW-central-outbound-atta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0f9f2628bf88d2be5",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-010dcbfaf46b19f48",
              "subnet-09ae1db0c0fb9eac0",
              "subnet-0b5f1f7f46f90be59"
            ],
            "tags": {
              "Name": "central-network-outbound-vpc-tgw-attachment",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "vpc-tgw-attachment",
              "site": "primary",
              "team": "sre-ops"
            },
            "tags_all": {
              "Name": "central-network-outbound-vpc-tgw-attachment",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "opw",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "central-network",
              "resource-type": "vpc-tgw-attachment",
              "site": "primary",
              "team": "sre-ops"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0fe904942d4c271da",
            "vpc_id": "vpc-0e7f348dce39c558b",
            "vpc_owner_id": "851191013252"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "TGW-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-00030890b98cc4eab_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0f9f2628bf88d2be5",
            "transit_gateway_route_table_id": "tgw-rtb-00030890b98cc4eab"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta",
            "module.vpc-way-prod.aws_ec2_transit_gateway_route_table.TGW-atta-rt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "TGW-atta-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:transit-gateway-route-table/tgw-rtb-00030890b98cc4eab",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-00030890b98cc4eab",
            "tags": {
              "Name": "way4-prod-vpc-tgw-attachment-rtb"
            },
            "tags_all": {
              "Name": "way4-prod-vpc-tgw-attachment-rtb"
            },
            "transit_gateway_id": "tgw-0fe904942d4c271da"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "TGW-rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-00030890b98cc4eab_tgw-attach-082400b38a8977921",
            "resource_id": "vpc-0ce94a3161ef5c379",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-082400b38a8977921",
            "transit_gateway_route_table_id": "tgw-rtb-00030890b98cc4eab"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_route_table.TGW-atta-rt",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "TGW-cen-out-to-wl-dr-rt-prop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-05eac6ab940ed9e2f_tgw-attach-082400b38a8977921",
            "resource_id": "vpc-0ce94a3161ef5c379",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-082400b38a8977921",
            "transit_gateway_route_table_id": "tgw-rtb-05eac6ab940ed9e2f"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_route_table.TGW-central-outbound-rt",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "TGW-rt-prop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-00030890b98cc4eab_tgw-attach-082400b38a8977921",
            "resource_id": "vpc-0ce94a3161ef5c379",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-082400b38a8977921",
            "transit_gateway_route_table_id": "tgw-rtb-00030890b98cc4eab"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_route_table.TGW-atta-rt",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "TGW-to-cen-out-rt-prop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-00030890b98cc4eab_tgw-attach-0f9f2628bf88d2be5",
            "resource_id": "vpc-0e7f348dce39c558b",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f9f2628bf88d2be5",
            "transit_gateway_route_table_id": "tgw-rtb-00030890b98cc4eab"
          },
          "dependencies": [
            "module.network-central-network-prod-outbound.aws_subnet.tgw-attachment-subnet",
            "module.network-central-network-prod-outbound.aws_vpc.central_outbound_vpc",
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.transit-gateway.aws_ec2_transit_gateway_vpc_attachment.TGW-central-outbound-atta",
            "module.vpc-way-prod.aws_ec2_transit_gateway_route_table.TGW-atta-rt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "TGW-atta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-082400b38a8977921",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-00e60c37214c2cd66",
              "subnet-025d2924704771dd1"
            ],
            "tags": {
              "Name": "way4-prod-vpc-tgw-attachment",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "vpc-tgw-attachment",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-vpc-tgw-attachment",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "vpc-tgw-attachment",
              "site": "primary",
              "team": "devops"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0fe904942d4c271da",
            "vpc_id": "vpc-0ce94a3161ef5c379",
            "vpc_owner_id": "851191013252"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:internet-gateway/igw-01fb8a67022631749",
            "id": "igw-01fb8a67022631749",
            "owner_id": "851191013252",
            "tags": {
              "Name": "way4-prod-opw-igw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "internet-gateway",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-opw-igw",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "internet-gateway",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0b1cff427071b6e58",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b1cff427071b6e58",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-00c3193a026171c8f",
              "subnet-0aee4e75b5bfb7af8"
            ],
            "tags": {
              "Name": "way4-prod-database-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-database-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.database-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private-application-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-035e6ed5e2cf80166",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-035e6ed5e2cf80166",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-007e016f03d4e2d1d",
              "subnet-0bc65bfc1fd17e323"
            ],
            "tags": {
              "Name": "way4-prod-private-application-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-application-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.private-application-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private-back-office-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-06a58b928b40c8cf8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06a58b928b40c8cf8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-0595e8ea495b8c9ce",
              "subnet-0ffc8751c6db553d6"
            ],
            "tags": {
              "Name": "way4-prod-private-back-office-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-back-office-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.private-back-office-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private-ec2-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0894641ef1d5a20fa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0894641ef1d5a20fa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-00742df93db6ad695",
              "subnet-08599a77fedec2a91"
            ],
            "tags": {
              "Name": "way4-prod-private-ec2-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-ec2-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public-dmz-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-003c2eceaa4271c99",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-003c2eceaa4271c99",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-00e3d946371be93a2",
              "subnet-084759604acabb930"
            ],
            "tags": {
              "Name": "way4-prod-public-dmz-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-public-dmz-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.public-dmz-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tgw-attachment-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:network-acl/acl-0535b8924374d0624",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0535b8924374d0624",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851191013252",
            "subnet_ids": [
              "subnet-00e60c37214c2cd66",
              "subnet-025d2924704771dd1"
            ],
            "tags": {
              "Name": "way4-prod-tgw-attachment-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-tgw-attachment-opw-acl",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "network acls",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0fdc7782d4e4daea5",
            "id": "rtb-0fdc7782d4e4daea5",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "way4-prod-database-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-database-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-application-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0cc280aa46825b445",
            "id": "rtb-0cc280aa46825b445",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0fe904942d4c271da",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "way4-prod-private-application-subnet-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-application-subnet-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-back-office-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0dbaad93c24389176",
            "id": "rtb-0dbaad93c24389176",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0fe904942d4c271da",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "way4-prod-private-back-office-subnet-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-back-office-subnet-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-ec2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0ecdfce940bcfe5a3",
            "id": "rtb-0ecdfce940bcfe5a3",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0fe904942d4c271da",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "way4-prod-private-ec2-subnet-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-ec2-subnet-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-dmz-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-0aada982ca7077bdf",
            "id": "rtb-0aada982ca7077bdf",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01fb8a67022631749",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "way4-prod-public-dmz-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-public-dmz-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_internet_gateway.IGW",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw-attachment-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:route-table/rtb-03c5cf0ad6e15fc5a",
            "id": "rtb-03c5cf0ad6e15fc5a",
            "owner_id": "851191013252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0fe904942d4c271da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "way4-prod-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-tgw-attachment-opw-rtb",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "route-table",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dd44f2e5abb942b",
            "route_table_id": "rtb-0fdc7782d4e4daea5",
            "subnet_id": "subnet-0aee4e75b5bfb7af8"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.database-rtb",
            "module.vpc-way-prod.aws_subnet.database-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f27ac9f5a5d5a2f6",
            "route_table_id": "rtb-0fdc7782d4e4daea5",
            "subnet_id": "subnet-00c3193a026171c8f"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.database-rtb",
            "module.vpc-way-prod.aws_subnet.database-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-application-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da99d2d720094556",
            "route_table_id": "rtb-0cc280aa46825b445",
            "subnet_id": "subnet-007e016f03d4e2d1d"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.private-application-subnet",
            "module.vpc-way-prod.aws_subnet.private-application-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeccc1f8d5665d57",
            "route_table_id": "rtb-0cc280aa46825b445",
            "subnet_id": "subnet-0bc65bfc1fd17e323"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.private-application-subnet",
            "module.vpc-way-prod.aws_subnet.private-application-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-back-office-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08182d8842c71a45d",
            "route_table_id": "rtb-0dbaad93c24389176",
            "subnet_id": "subnet-0595e8ea495b8c9ce"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.private-back-office-subnet",
            "module.vpc-way-prod.aws_subnet.private-back-office-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040779c03aa52d636",
            "route_table_id": "rtb-0dbaad93c24389176",
            "subnet_id": "subnet-0ffc8751c6db553d6"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.private-back-office-subnet",
            "module.vpc-way-prod.aws_subnet.private-back-office-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ec2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f722a4e59edd50f",
            "route_table_id": "rtb-0ecdfce940bcfe5a3",
            "subnet_id": "subnet-08599a77fedec2a91"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.private-ec2-subnet",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fce84fff7c95359b",
            "route_table_id": "rtb-0ecdfce940bcfe5a3",
            "subnet_id": "subnet-00742df93db6ad695"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.private-ec2-subnet",
            "module.vpc-way-prod.aws_subnet.private-ec2-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09410b3dcb706b48a",
            "route_table_id": "rtb-0aada982ca7077bdf",
            "subnet_id": "subnet-084759604acabb930"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_internet_gateway.IGW",
            "module.vpc-way-prod.aws_route_table.public-dmz-rtb",
            "module.vpc-way-prod.aws_subnet.public-dmz-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad3fc022d0fdb4d",
            "route_table_id": "rtb-0aada982ca7077bdf",
            "subnet_id": "subnet-00e3d946371be93a2"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_internet_gateway.IGW",
            "module.vpc-way-prod.aws_route_table.public-dmz-rtb",
            "module.vpc-way-prod.aws_subnet.public-dmz-subnet",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tgw-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096902e0d3d988941",
            "route_table_id": "rtb-03c5cf0ad6e15fc5a",
            "subnet_id": "subnet-00e60c37214c2cd66"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.tgw-attachment-rtb",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de7af0c66b396eeb",
            "route_table_id": "rtb-03c5cf0ad6e15fc5a",
            "subnet_id": "subnet-025d2924704771dd1"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.tgw",
            "module.vpc-way-prod.aws_ec2_transit_gateway_vpc_attachment.TGW-atta",
            "module.vpc-way-prod.aws_route_table.tgw-attachment-rtb",
            "module.vpc-way-prod.aws_subnet.tgw-attachment-subnet",
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Way4-prod-3D-secure-ACS-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-06d62c52fb1e1a954",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d62c52fb1e1a954",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9702,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9702
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9998
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Way4-prod-3D-secure-ACS-public",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "way4-prod-Way4-prod-3D-secure-ACS-public-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-Way4-prod-3D-secure-ACS-public-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-09d92c5b3f2573ed5",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d92c5b3f2573ed5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8686,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8686
              }
            ],
            "name": "nlb_security_group",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "way4-prod-nlb_security_group-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-nlb_security_group-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "way4-prod-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-0902e30effb8e5e54",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0902e30effb8e5e54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 1524,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1524
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "way4-prod-db",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "way4-prod-way4-prod-db-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-way4-prod-db-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "way4-prod-fs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-03389bc12dd0293af",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03389bc12dd0293af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9998
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "way4-prod-fs",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "way4-prod-way4-prod-fs-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-way4-prod-fs-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "way4-prod-ts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-0e9fd59f33dbb6e01",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9fd59f33dbb6e01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 12345,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12345
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 1500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 19096,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 19096
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 20500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 20600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20600
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 21118,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21118
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8686,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8686
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9085
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "way4-prod-ts",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "way4-prod-way4-prod-ws-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-way4-prod-ws-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "way4-prod-ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:security-group/sg-023b6b2602f674a1b",
            "description": "opw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023b6b2602f674a1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 17000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 17000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 18000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 20104,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20104
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 20300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8686,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8686
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9085
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9904
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 9096,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9096
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "way4-prod-ws",
            "name_prefix": "",
            "owner_id": "851191013252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "way4-prod-way4-prod-ws-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-way4-prod-ws-opw-sg",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "security-group",
              "site": "primary",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0aee4e75b5bfb7af8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.7.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aee4e75b5bfb7af8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-database-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-database-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-00c3193a026171c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.7.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c3193a026171c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-database-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-database-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-application-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-007e016f03d4e2d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.7.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007e016f03d4e2d1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-private-application-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-application-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0bc65bfc1fd17e323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.7.17.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc65bfc1fd17e323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-private-application-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-application-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-back-office-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0595e8ea495b8c9ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.7.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0595e8ea495b8c9ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-private-back-office-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-back-office-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-0ffc8751c6db553d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.7.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffc8751c6db553d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-private-back-office-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-back-office-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ec2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-08599a77fedec2a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.7.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08599a77fedec2a91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-private-ec2-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-ec2-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-00742df93db6ad695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.7.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00742df93db6ad695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-private-ec2-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-private-ec2-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-dmz-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-084759604acabb930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.7.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084759604acabb930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-public-dmz-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-public-dmz-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-00e3d946371be93a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.7.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3d946371be93a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-public-dmz-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-public-dmz-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw-attachment-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-00e60c37214c2cd66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.7.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e60c37214c2cd66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:subnet/subnet-025d2924704771dd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.7.20.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025d2924704771dd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851191013252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "way4-prod-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-tgw-attachment-opw-subnet",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "subnet",
              "site": "primary",
              "team": "devops"
            },
            "vpc_id": "vpc-0ce94a3161ef5c379"
          },
          "dependencies": [
            "module.vpc-way-prod.aws_vpc.workload-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-way-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workload-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851191013252:vpc/vpc-0ce94a3161ef5c379",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-0982bc46e47dbf1c1",
            "default_route_table_id": "rtb-09b969abb8898f33e",
            "default_security_group_id": "sg-040b1627be1c394f3",
            "dhcp_options_id": "dopt-0e05caa86f3e708b8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce94a3161ef5c379",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b969abb8898f33e",
            "owner_id": "851191013252",
            "tags": {
              "Name": "way4-prod-opw-vpc",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "vpc",
              "site": "primary",
              "team": "devops"
            },
            "tags_all": {
              "Name": "way4-prod-opw-vpc",
              "canbedelete": "no",
              "component": "network-infra",
              "environment": "prod",
              "iac": "true",
              "organization": "COMPANY",
              "owner": "sa",
              "project-name": "way4",
              "resource-type": "vpc",
              "site": "primary",
              "team": "devops"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}